--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
         <nav>
             <a href="#" class="nav">Home</a>
             <div class="dropdown" data-dropdown>
-                <button href="#" class="nav" data-dropdown-button>Project <i class='bx bx-chevron-down'></i></button>
+                <button href="#" class="nav" data-dropdown-button>
+                    Project 
+                    <i class='bx bx-chevron-down'></i>
+                </button>
                 <div class="dropdown-content" id="dropdownContent">
                     <div class="first">
                         <a href="/mobile.html">Mobile</a>
                     </div>
                     <div>
-                        <a href="/web.html">Web</a>
+                        <a href="/website.html">Web</a>
                     </div>
                 </div>
             </div>
