--- a/website.html
+++ b/website.html
@@ -33,30 +33,27 @@
         </div>
     </header>
     <main>
-        <section id="mobile">
+        <section id="website">
             <div class="wrapper">
                 <div class="container">
                     <div class="contain">
                         <h1 class="title">KoStore</h1>
-                        <p>This is a UI-eCommerce system that has been developed with a number of dependencies and has been optimised for efficiency.</p>
                     </div>
                 </div>
                 <div class="container">
                     <div class="contain">
                         <h1 class="title">QrKu</h1>
-                        <p>This is a QR generator application that has been optimised for efficiency. In addition to generating new QR codes, it can also scan existing QR codes.</p>
                     </div>
                 </div>
                 <div class="container">
                     <div class="contain">
                         <h1 class="title">Note App</h1>
-                        <p>This application has been developed using local database ISAR and a minimalist design, with the aim of ensuring user experience is optimised.</p>
                     </div>
                 </div>
                 <div class="container">
                     <div class="contain">
                         <h1 class="title">News App</h1>
-                        <p>I integrated the news app's API into my application to create this application.</p>
+                        <p>saya membuat aplikasi ini dengan mengintegrasi API dari news app ke dalam aplikasi saya</p>
                     </div>
                 </div>
             </div>
