--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <header>
         <img src="asset/image/MyLogo.webp" alt="" width="80" />
         <nav>
-            <a href="#" class="nav">Home</a>
+            <a href="/index.html" class="nav">Home</a>
             <div class="dropdown" data-dropdown>
                 <button href="#" class="nav" data-dropdown-button>
                     Project
