--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <header>
         <img src="asset/image/MyLogo.webp" alt="" width="80" />
         <nav>
-            <a href="/index.html" class="nav">Home</a>
+            <a href="index.html" class="nav">Home</a>
             <div class="dropdown" data-dropdown>
                 <button href="#" class="nav" data-dropdown-button>
                     Project
@@ -22,14 +22,14 @@
                 </button>
                 <div class="dropdown-content" id="dropdownContent">
                     <div class="first">
-                        <a href="/mobile.html">Mobile</a>
+                        <a href="mobile.html">Mobile</a>
                     </div>
                     <div>
-                        <a href="/website.html">Web</a>
+                        <a href="website.html">Web</a>
                     </div>
                 </div>
             </div>
-            <a href="/contact.html" class="nav">Contact</a>
+            <a href="contact.html" class="nav">Contact</a>
         </nav>
         <div class="button">
             <a href="">My CV</a>
