--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
                 </button>
                 <div class="dropdown-content" id="dropdownContent">
                     <div class="first">
-                        <a href="/mobile.html">Mobile</a>
+                        <a href="mobile.html">Mobile</a>
                     </div>
                     <div>
-                        <a href="/website.html">Web</a>
+                        <a href="website.html">Web</a>
                     </div>
                 </div>
             </div>
-            <a href="/contact.html" class="nav">Contact</a>
+            <a href="contact.html" class="nav">Contact</a>
         </nav>
         <div class="button">
             <a href="">My CV</a>
