--- a/website.html
+++ b/website.html
@@ -26,7 +26,7 @@
                     </div>
                 </div>
             </div>
-            <a href="/contact.html" class="nav">Contact</a>
+            <a href="contact.html" class="nav">Contact</a>
         </nav>
         <div class="button">
             <a href="">My CV</a>
